# simple_console_game

./: CMakeLists.txt  items.json  main.cpp
cmake/Modules/: FindJsoncpp.cmake
core/: game_core.h  game_functions.h  game_menu.h
models/: enemy.h  game_living_obj.h  game_menu.h  game_obj.h  item.h  player.h
